# uhdi

./: .gitignore  .markdownlint-cli2.jsonc  .scalafmt.conf  README.md  pyproject.toml
.github/actions/setup-nu/: action.yml
.github/workflows/: build-tools.yml  ci.yml
bench/: README.md  manifest.toml  pyproject.toml
bench/fixtures/: Counter.scala
bench/src/uhdi_bench/: __init__.py  _downgrade_fir.py  compile.py  dump_pair.py  manifest.py  runner.py
bench/test/: conftest.py  test_downgrade_fir.py  test_pipeline.py  test_runner_helpers.py
converter/: pyproject.toml
converter/schemas/: README.md  scopes.schema.json  temporal.schema.json
converter/src/uhdi_common/: __init__.py  backend.py  cli.py  context.py  diff.py  expressions.py  refs.py  validate.py
converter/src/uhdi_common/schemas/: README.md  dataflow.schema.json  document.schema.json  expressions.schema.json  provenance.schema.json  scopes.schema.json  types.schema.json  variables.schema.json
converter/src/uhdi_to_hgdb/: __init__.py  __main__.py  convert.py  dump.py
converter/src/uhdi_to_hgdb_json/: __init__.py  __main__.py  convert.py
converter/src/uhdi_to_hgldd/: __init__.py  __main__.py  convert.py
converter/test/: conftest.py  test_backend.py  test_cli.py  test_context.py  test_determinism.py  test_diff.py  test_dump.py  test_errors.py  test_expressions.py  test_golden.py  test_hgdb_internals.py  test_hgdb_json_internals.py  test_hgldd_internals.py  test_refs.py  test_validate.py  update_expected.py
converter/test/fixtures/expected/hgdb/: bundle_io.db.json  counter.db.json  leaf_and_top.db.json  with_expression.db.json
converter/test/fixtures/expected/hgdb_json/: bundle_io.json.json  counter.json.json  leaf_and_top.json.json  with_expression.json.json
converter/test/fixtures/expected/hgldd/: bundle_io.dd.json  counter.dd.json  leaf_and_top.dd.json  with_expression.dd.json
converter/test/fixtures/uhdi/: bundle_io.uhdi.json  counter.uhdi.json  leaf_and_top.uhdi.json  with_expression.uhdi.json
demo/: README.md  build.mill  millw  run.nu  run.sh
demo/bus/: millw  run.sh
demo/bus/app/src/: MemController.scala  MemControllerSim.scala
demo/fifo/: build.mill
demo/fifo/app/src/: Fifo.scala  FifoSim.scala
demo/fsm/: run.sh
demo/fsm/app/src/: TrafficLight.scala  TrafficLightSim.scala
demo/gcd/: build.mill  run.sh  tb.sv
demo/gcd/app/src/: GCD.scala  GCDSim.scala
demo/gcd/src/: GCD.scala
demo/pipeline/: build.mill  millw
demo/pipeline/app/src/: Pipeline.scala  PipelineSim.scala
docs/: consumer-roadmap.md  uhdi-action-plan.md  uhdi-spec.md
tools/: README.md  install.nu  install.sh  test-install.nu  test-install.sh  versions.env
tools/docker/: Dockerfile  build-and-push.nu  build-and-push.sh  check-tag.nu  check-tag.sh  compute-tag.nu  compute-tag.sh  entrypoint.sh  git-pin  image-tag.txt
tools/docker/git-hooks/: pre-commit
tools/lib/: common.nu
tools/release/: release-chisel.nu  release-chisel.sh  release-firtool.nu  release-firtool.sh  release-hgdb-py.nu  release-hgdb-py.sh  release-tywaves.nu  release-tywaves.sh
tools/test/: _runner.nu  common.test.nu  install.test.nu
