[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uhdi-converter"
version = "0.1.0"
description = "Pool-based UHDI -> HGLDD / hgdb SQLite converters."
requires-python = ">=3.9"
dependencies = ["jsonschema>=4.18"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
uhdi-to-hgldd = "uhdi_to_hgldd.__main__:main"
uhdi-to-hgdb = "uhdi_to_hgdb.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
